[gd_scene load_steps=35 format=3 uid="uid://ddl3kmbdoin8q"]

[ext_resource type="Script" path="res://Characters/Omen/player_omen.gd" id="1_1kcb3"]
[ext_resource type="Texture2D" uid="uid://bbnoeg3abldlp" path="res://Assets/DARK - Dog Companion/Doggo-Fall_Wh.png" id="1_bhe28"]
[ext_resource type="Texture2D" uid="uid://6171yx3xlxd3" path="res://Assets/DARK - Dog Companion/Doggo-Idle_Wh.png" id="1_gtkpr"]
[ext_resource type="Texture2D" uid="uid://bjjb7sf3gl7c" path="res://Assets/DARK - Dog Companion/Doggo-Jump_Wh.png" id="1_xlde8"]
[ext_resource type="Texture2D" uid="uid://korf5yc5784o" path="res://Assets/DARK - Dog Companion/Doggo-Run_Wh.png" id="2_vsgx1"]
[ext_resource type="PackedScene" uid="uid://dk7tplt3m1gq6" path="res://Component/CollisionComponent.tscn" id="6_5nh2e"]
[ext_resource type="PackedScene" uid="uid://deut0bi01cso8" path="res://Component/camera/camera_component.tscn" id="6_etsgr"]
[ext_resource type="PackedScene" uid="uid://d1x5k4xr5t6ph" path="res://Component/animation_component.tscn" id="7_vaxaa"]
[ext_resource type="PackedScene" uid="uid://2u3f38bv1fs8" path="res://Component/gravity_component.tscn" id="8_q4vns"]
[ext_resource type="PackedScene" uid="uid://dwqsil20q5g1x" path="res://Component/input_component.tscn" id="9_gqwgf"]
[ext_resource type="PackedScene" uid="uid://cmliirm4gwimm" path="res://Component/movement_component.tscn" id="10_i4euo"]
[ext_resource type="PackedScene" uid="uid://bjq4pbuawg5ic" path="res://Component/Jump/jump_component.tscn" id="11_6d6qd"]
[ext_resource type="Script" path="res://Characters/Omen/LabelDebug.gd" id="13_e6rbj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ssbi"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5e72o"]
size = Vector2(12, 21)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yhqoq"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_14ain"]
radius = 5.08845
height = 22.0

[sub_resource type="Animation" id="Animation_dac4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fbdlk"]
resource_name = "fall"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_bhe28")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_g3kih"]
resource_name = "idle"
length = 1.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_gtkpr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_3ra6u"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xlde8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_betmc"]
resource_name = "run"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vsgx1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbbk4"]
_data = {
"RESET": SubResource("Animation_dac4r"),
"fall": SubResource("Animation_fbdlk"),
"idle": SubResource("Animation_g3kih"),
"jump": SubResource("Animation_3ra6u"),
"run": SubResource("Animation_betmc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4vb7b"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7wds8"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_drlws"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_t71g4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4vb7b")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_7wds8")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_drlws")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8yp25"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pdstl"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h05qb"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ufs4n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gf4nr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2vdt6"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4da7x"]
states/Move/node = SubResource("AnimationNodeBlendSpace1D_t71g4")
states/Move/position = Vector2(311, 100)
states/Start/position = Vector2(148, 100)
states/fall/node = SubResource("AnimationNodeAnimation_8yp25")
states/fall/position = Vector2(519, 100)
states/jump/node = SubResource("AnimationNodeAnimation_pdstl")
states/jump/position = Vector2(427, 39)
transitions = ["jump", "fall", SubResource("AnimationNodeStateMachineTransition_h05qb"), "Start", "Move", SubResource("AnimationNodeStateMachineTransition_ufs4n"), "Move", "jump", SubResource("AnimationNodeStateMachineTransition_gf4nr"), "fall", "Move", SubResource("AnimationNodeStateMachineTransition_2vdt6")]

[node name="Player_Omen" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "jump_component", "animation_component", "animation_tree", "camera_component", "collision_component")]
script = ExtResource("1_1kcb3")
gravity_component = NodePath("Components/GravityComponent")
input_component = NodePath("Components/InputComponent")
movement_component = NodePath("Components/MovementComponent")
jump_component = NodePath("Components/JumpComponent")
animation_component = NodePath("Components/AnimationComponent")
animation_tree = NodePath("AnimationTree")
camera_component = NodePath("Components/CameraComponent")
collision_component = NodePath("Components/CollisionComponent")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(260, -114)
limit_top = 114
limit_bottom = -114

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vsgx1")
hframes = 8

[node name="Collision_idle" type="CollisionShape2D" parent="."]
position = Vector2(-7.5, 11)
rotation = -1.57079
shape = SubResource("RectangleShape2D_0ssbi")
debug_color = Color(0.380557, 0.4281, 0.0177518, 0.42)

[node name="Collision_run" type="CollisionShape2D" parent="."]
position = Vector2(-6, 11)
rotation = -1.57079
shape = SubResource("RectangleShape2D_5e72o")
disabled = true
debug_color = Color(0.743124, 0.455639, 0.252195, 0.42)

[node name="Collision_jump" type="CollisionShape2D" parent="."]
position = Vector2(-8, 9)
rotation = -1.83259
shape = SubResource("CapsuleShape2D_yhqoq")
disabled = true
debug_color = Color(0.588307, 0.410263, 0.928266, 0.42)

[node name="Collision_fall" type="CollisionShape2D" parent="."]
position = Vector2(-7, 9)
rotation = -1.83259
shape = SubResource("CapsuleShape2D_14ain")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jbbk4")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_4da7x")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0

[node name="Components" type="Node" parent="."]

[node name="CollisionComponent" parent="Components" node_paths=PackedStringArray("idle_CollisionPolygon", "run_CollisionPolygon", "jump_CollisionPolygon", "fall_CollisionPolygon") instance=ExtResource("6_5nh2e")]
idle_CollisionPolygon = NodePath("../../Collision_idle")
run_CollisionPolygon = NodePath("../../Collision_run")
jump_CollisionPolygon = NodePath("../../Collision_jump")
fall_CollisionPolygon = NodePath("../../Collision_fall")

[node name="CameraComponent" parent="Components" node_paths=PackedStringArray("camera2D") instance=ExtResource("6_etsgr")]
camera2D = NodePath("../../Camera2D")

[node name="AnimationComponent" parent="Components" node_paths=PackedStringArray("sprite") instance=ExtResource("7_vaxaa")]
sprite = NodePath("../../Sprite2D")

[node name="GravityComponent" parent="Components" instance=ExtResource("8_q4vns")]

[node name="InputComponent" parent="Components" instance=ExtResource("9_gqwgf")]

[node name="MovementComponent" parent="Components" instance=ExtResource("10_i4euo")]
speed = 1.0
ground_accel_speed = 8.0
air_decel_speed = 10.0

[node name="JumpComponent" parent="Components" node_paths=PackedStringArray("jump_buffer_timer", "coyote_timer") instance=ExtResource("11_6d6qd")]
jump_buffer_timer = NodePath("../../JumpBuffer")
coyote_timer = NodePath("../../CoyoteTimer")
jump_velocity = -400.0

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="LabelDebug" type="Label" parent="." node_paths=PackedStringArray("idle_box", "run_box", "jump_box", "fall_box")]
visible = false
offset_left = -17.0
offset_top = -28.0
offset_right = 90.0
offset_bottom = -5.0
text = "Collision box"
script = ExtResource("13_e6rbj")
idle_box = NodePath("../Collision_idle")
run_box = NodePath("../Collision_run")
jump_box = NodePath("../Collision_jump")
fall_box = NodePath("../Collision_fall")

[connection signal="speed_auto" from="." to="Components/InputComponent" method="_on_player_omen_speed_auto"]
